# archithreat

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SBOM.md  SECURITY.md  archithreat-SPEC.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  pages.yaml  release.yaml
browser/: .gitignore  README.md  index.html  main.js  package-lock.json  package.json  style.css  ui.js  worker.js
browser/scripts/: build.mjs  serve.mjs  vendor-drawio.mjs  vendor-pyodide.mjs
docs/: adding-a-target.md  browser.md  concepts.md  lemonade_shop.drawio  limitations.md  mapping-table.md  patterns.md  privacy.md  self-hosting.md  targets.md
examples/: lemonade_shop.xml
scripts/: regen_iriusrisk_defaults.py  sync_iriusrisk_zones.py
src/archithreat/: __init__.py  __main__.py
src/archithreat/cli/: __init__.py  main.py
src/archithreat/core/: __init__.py  inventory.py  mapper.py  model.py  parser.py  resolver.py
src/archithreat/core/defaults/: __init__.py  drawio_iriusrisk.yaml  iriusrisk.yaml  threatdragon.yaml
src/archithreat/core/emitters/: __init__.py  drawio_iriusrisk.py  iriusrisk.py  threatdragon.py
src/archithreat/core/mappings/: __init__.py  base.py  drawio_iriusrisk.py  iriusrisk.py  threatdragon.py
src/archithreat/web/: __init__.py  api.py  app.py  limits.py  settings.py  ui.py
src/archithreat/web/static/: htmx.min.js  style.css
src/archithreat/web/templates/: base.html  convert.html  index.html  inventory.html  validate.html
src/archithreat/web/templates/partials/: result.html
tests/: conftest.py  test_property_based.py
tests/browser/: test_smoke.py
tests/cli/: test_cli.py
tests/core/: test_coverage_gaps.py  test_inventory.py  test_mapper.py  test_parser.py  test_resolver.py
tests/core/emitters/: test_drawio_iriusrisk.py  test_iriusrisk.py  test_threatdragon.py
tests/core/mappings/: test_drawio_iriusrisk.py  test_iriusrisk.py  test_threatdragon.py
tests/fixtures/: co_hosted.xml  external_actor.xml  lemonade_shop.xml  minimal.xml  orphans.xml  pet_shop.xml
tests/fixtures/expected/drawio_iriusrisk/: co_hosted.drawio  external_actor.drawio  lemonade_shop.drawio  minimal.drawio  orphans.drawio
tests/fixtures/expected/iriusrisk/: co_hosted.drawio  external_actor.drawio  lemonade_shop.drawio  minimal.drawio  orphans.drawio
tests/fixtures/expected/threatdragon/: co_hosted.json  external_actor.json  lemonade_shop.json  minimal.json  orphans.json  pet_shop.json
tests/web/: conftest.py  test_api.py  test_limits.py  test_no_persistence.py  test_ui.py
