[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archithreat"
version = "3.0.0"
description = "Convert ArchiMate 3.x architecture models into threat-modeling artifacts (v1: IriusRisk-compatible draw.io)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Ron", email = "rondlite@gmail.com" }]
keywords = ["archimate", "threat-modeling", "iriusrisk", "drawio", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "lxml>=5.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
cli = ["click>=8.1"]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
    "playwright>=1.45",
    "pre-commit>=3.7",
    "types-PyYAML",
    "lxml-stubs",
]

[project.scripts]
archithreat = "archithreat.cli.main:main"

[project.urls]
Homepage = "https://github.com/rondlite/archithreat"
Repository = "https://github.com/rondlite/archithreat"
Issues = "https://github.com/rondlite/archithreat/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/archithreat"]
# Default mapping YAML is bundled via the package directory (hatchling
# auto-includes data files inside discovered packages).

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"src/archithreat/web/**" = ["B008", "UP042"]
"src/archithreat/core/inventory.py" = ["RUF001", "RUF046"]
"src/archithreat/core/mappings/base.py" = ["SIM102", "SIM103"]
"src/archithreat/core/mappings/__init__.py" = ["SIM102"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/archithreat"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["yaml", "lxml.*", "slowapi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "browser: marks tests requiring playwright",
]

[tool.coverage.run]
source = ["src/archithreat/core"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
fail_under = 90
